# mykrut

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  clippy.toml  feature-comparison.md  justfile
app/: Cargo.toml
app/src/: bookmarks.rs  format_util.rs  fs_atomic.rs  logging.rs  main.rs  settings.rs  state.rs  ui_watchdog.rs
app/src/glue/: archive.rs  clipboard.rs  default_app.rs  file_ops.rs  mod.rs  mtp.rs  navigation.rs  open_with.rs  places.rs  properties.rs  remote.rs  search.rs  selection.rs  sort_select.rs  spawn.rs  split.rs  tabs.rs  thumbnails.rs  udisks.rs  undo.rs  watcher.rs
app/ui/: globals.slint  icons.slint  main_window.slint
app/ui/components/: breadcrumbs.slint  bulk_rename_dialog.slint  context_menu.slint  dialogs.slint  file_grid_view.slint  file_list_view.slint  file_row.slint  file_tile.slint  folder_context_menu.slint  icon_button.slint  pane_area.slint  places_sidebar.slint  progress_dialog.slint  properties_dialog.slint  search_bar.slint  settings_popup.slint  status_bar.slint  structs.slint  tab_strip.slint  toolbar.slint  trash_bar.slint
crates/core/: Cargo.toml
crates/core/src/: bulk_rename.rs  copy_progress.rs  disk_space.rs  file_ops.rs  icon_map.rs  lib.rs  local_fs.rs  media_meta.rs  thumbnails.rs  trash_io.rs  types.rs  uid_map.rs
